--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,31 @@
-button {
-  cursor:pointer;
-  background-color:#4681f4;
-  color:white;
-  border-radius:10px;
-  padding:6px;
-  font-size:25px;
-  font-weight:bold;
-  text-align:center;
-  width:14%;
-  
+.wrapper
+{
+  width: 400px;
+  border: 2px dashed black;
+  text-align: center;
 }
-
-.outline {
- justify-content:center;
- display:flex;
-
+.image
+{
+  width: 400px;
 }
-
-.lecard{
- text-align: center;
- border: solid grey 6px;
- max-width:400px;
- border-radius: 20px;
- margin-bottom: 10px;
- font-size:20px;
- background-color:white;
+button
+{
+  padding: 12px;
+  font-size: 20px;
 }
-img{
-  width: 350px;
+button:hover 
+{
+  background-color: orange;
 }
-
-@media screen and (min-width:501px) and (max-width:800px) {
-
+button:active
+{
+  background-color: black;
 }
-@media screen and (max-width:500px) {
-  .lecard{
-    font-size: 5vw
-  }
+@media (max-width: 600px)
+{
+  .wrapper{background-color: #f3d4a1;}
 }
-.buttons {
-  margin: 16px auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly; 
-}
-button:hover{
-  background-color:red;
-}
-button:focus{
- background-color:red;
+@media (max-width: 400px)
+{
+  .details{display: none;}
 }
